# gaugen

./: Cargo.toml  README.md  screen.json
examples/: editor.rs  playground.rs  readme.rs  xplane11.rs
resources/: playground.json  screen_readme.json  screen_xplane11.json
src/: basic_components.rs  frontend.rs  gaugen.rs  geometry_components.rs  helpers.rs  lib.rs  main.old.rs  main.rs  session.rs
