[package]
name = "gaugen"
version = "0.1.0"
authors = ["cezar"]
edition = "2018"

[lib]
name = "gaugen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.6.0"
glutin = "0.13.0"
rand = "0.4"
nalgebra = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libmath = "0.2.1"
filetime = "0.2"
typed-arena = "2.0.1"

[dependencies.nanovg]
version = "1.0.2"
features = ["gl3"]
path = "../nanovg-rs-gaugen"
